[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Menu/solstice_ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/Menu/menu_panel.png" type="Texture" id=2]
[ext_resource path="res://fonts/joystix.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/Menu/OptionsMenu.gd" type="Script" id=4]

[node name="OptionsMenu" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 64.0
margin_top = 40.0
margin_right = 192.0
margin_bottom = 152.0
texture = ExtResource( 2 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
margin_left = 16.0
margin_top = 8.0
margin_right = 112.0
margin_bottom = 104.0
theme = ExtResource( 1 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenCheckBox" type="CheckBox" parent="NinePatchRect/VBoxContainer"]
margin_right = 96.0
margin_bottom = 10.0
theme = ExtResource( 1 )
text = "fullscreen"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="NinePatchRect/VBoxContainer"]
margin_top = 16.0
margin_right = 96.0
margin_bottom = 20.0

[node name="SoundLabel" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 26.0
margin_right = 96.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 3 )
custom_constants/shadow_offset_x = 0
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 0
text = "Sound FX"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundSlider" type="HSlider" parent="NinePatchRect/VBoxContainer"]
margin_top = 37.0
margin_right = 96.0
margin_bottom = 47.0
size_flags_vertical = 1
theme = ExtResource( 1 )
max_value = 1.0
step = 0.1
tick_count = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLabel" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 53.0
margin_right = 96.0
margin_bottom = 58.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
custom_constants/shadow_offset_x = 0
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 0
text = "MUSIC"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="NinePatchRect/VBoxContainer"]
margin_top = 64.0
margin_right = 96.0
margin_bottom = 74.0
theme = ExtResource( 1 )
max_value = 1.0
step = 0.1
tick_count = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="NinePatchRect/VBoxContainer"]
margin_top = 80.0
margin_right = 96.0
margin_bottom = 84.0

[node name="BackButton" type="Button" parent="NinePatchRect/VBoxContainer"]
margin_top = 90.0
margin_right = 96.0
margin_bottom = 95.0
theme = ExtResource( 1 )
text = "BACK"
[connection signal="toggled" from="NinePatchRect/VBoxContainer/FullscreenCheckBox" to="." method="_on_FullscreenCheckBox_toggled"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
